# alf-luca

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.txt  Uruchom_CLI.sh  Uruchom_GUI.bat  Uruchom_GUI.sh  _Uruchom_CLI.sh  _Uruchom_GUI.bat  camera_calib.npz  info.txt  kalman_tracker.py  pyproject.toml  requirements.txt  track_bright_spot.py  track_luca.py  track_spot.py
.github/: pull_request_template.md
config/: gui_display.yaml  run_tracking.sample.yaml  run_tracking.sledzenie_low_fp.yaml  settings.yaml
docs/: architecture.md  architecture_import_policy.toml  development.md  legacy_import_migration.md
luca_camera/: __init__.py  camera.py
luca_input/: config_mapping.py  pipeline_config_mapping.py
luca_processing/: __init__.py  detector_interfaces.py  detectors.py  kalman.py
luca_reporting/: __init__.py
luca_tracker/: __init__.py  cli.py  config_model.py  detector_interfaces.py  detector_registry.py  detectors.py  gui.py  gui_components.py  gui_models.py  gui_services.py  gui_status.py  io_paths.py  kalman.py  pipeline.py  postprocess.py  pyproject.toml  reports.py  ros2_node.py  tracker_core.py  tracking.py  types.py  video_export.py
luca_tracking/: pipeline.py  tracking.py
luca_types/: __init__.py  luca_config.py
output/: tracking_results.csv
scripts/: _run_analisys.sh  _run_cli.sh  _run_gui.sh  common.bat  common.sh  compute_pnp_reference.py  run_analysis.sh  run_camera.bat  run_cli.bat  run_cli.sh  run_gui.bat  run_gui.sh  run_ros2_camera_xyz.bat  run_ros2_camera_xyz.sh
tests/: test_cli_exit_behavior.py  (+10 more)
(+24 files in other folders)
