[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luca-tracker"
version = "0.1.0"
description = "Warstwa kompatybilności API dla nowych paczek"
requires-python = ">=3.10"
dependencies = [
    "luca-types",
    "luca-input",
    "luca-camera",
    "luca-processing",
    "luca-tracking",
    "luca-reporting",
    "luca-publishing",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["luca_tracker*"]
